# oximy

./: .env.example  .gitignore  ENGINEERING.md  README.md  architecture.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/app/: config.py  db.py  logging_config.py  main.py  models.py  pricing.py  schemas.py
backend/app/api/: events.py  ingest.py  stats.py
backend/app/collectors/: base.py  claude_code.py  run_collector.py  upsert.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ConfidenceBadge.tsx  LineageDrawer.tsx  StatCard.tsx
frontend/src/components/charts/: ConfidenceDonut.tsx  DimensionBar.tsx  TimelineArea.tsx
frontend/src/hooks/: useAutoRefresh.ts
frontend/src/pages/: DataQuality.tsx  EventExplorer.tsx  Overview.tsx  Timeline.tsx
